Bug 318079 - "Too many connections from this ip" message looks bad
Summary: "Too many connections from this ip" message looks bad
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: ftp (other bugs)
Version First Reported In: 2.2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-09 09:22 UTC by Kai Uwe Broulik
Modified: 2015-02-08 13:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Too many connections message (15.63 KB, image/png)
2013-04-09 09:22 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2013-04-09 09:22:33 UTC
The message widget that appears when there are too many connections from an IP looks bad. It has a blank line for no apparent reason and the period is on an additional line. Maybe KIO gives this message and Dolphin just prints it out without being to blame ;)

Reproducible: Always
Comment 1 Kai Uwe Broulik 2013-04-09 09:22:51 UTC
Created attachment 78747 [details]
Too many connections message
Comment 2 Frank Reininghaus 2013-04-09 09:29:04 UTC
I think that this does indeed not have anything to do with Dolphin. Please reassign to the kioslave which you used to make that connection - unfortunately, it's not possible to guess that from your report.
Comment 3 Kai Uwe Broulik 2013-04-09 09:30:48 UTC
Re-assigning to FTP kio slave.
Comment 4 Jekyll Wu 2013-04-09 09:41:29 UTC
(In reply to comment #3)
> Re-assigning to FTP kio slave.

When you reassign a report to another product,  make sure " Reset Assignee to default " is checked. Otherwise, it is still assigned to the same guys.
Comment 5 Kai Uwe Broulik 2015-02-08 13:19:17 UTC
Git commit acd0c40e1b6988732fe0c1eaa080bbe321a39a68 by Kai Uwe Broulik.
Committed on 08/02/2015 at 13:14.
Pushed by broulik into branch 'master'.

Make FTP error messages prettier

Remove those line breaks and also fix a glaring encoding issue

REVIEW: 122360

M  +1    -1    src/ioslaves/ftp/ftp.cpp

http://commits.kde.org/kio/acd0c40e1b6988732fe0c1eaa080bbe321a39a68