Make FTP error messages prettier

Remove those line breaks and also fix a glaring encoding issue

REVIEW: 122360
BUG: 318079